--- a/css/index.css
+++ b/css/index.css
@@ -118,6 +118,7 @@ transform: translateY(10px);
 
 
 
+
 /* Section Hero */
 .hero-section {
   position: relative;
@@ -619,22 +620,635 @@ transform: translateY(10px);
 }
 
 
-//responsividade por seção
 
-/* Responsive body */
 
-  .bg-cover{
-    display: grid;
-    grid-template-columns: repeat(3, 100px);
-    grid-template-rows: repeat(2, 50px);    
+/*responsive-code*/
+
+@media (max-width: 320px) {
+  body{ 
+    background-color: var(--color-two);
+    background: fixed;
+    object-fit: cover;
+    font-family: 'Poppins',sans-serif;
+  }
+  
+  .container {
+    display: flex;
+    justify-content: center; /* Espaça logo e menu */
+    align-items: center; /* Alinha verticalmente ao centro */
+    width: 100px; /* Garante que o contêiner use toda a largura */
+  }
+
+  .relative {
+    position: absolute; /* Para posicionamento relativo se necessário */
+  }
+
+
+  .container {
+    display: flex;
+    justify-content: space-between; /* Espaça logo e menu */
+    align-items: center; /* Alinha verticalmente ao centro */
+    width: 100%; /* Garante que o contêiner use toda a largura */
+  }
+
+  .navigation {
+    height: 20px; /* Ajuste conforme necessário */
+    width: 1%;
+    display: flex; /* Alinha logo e menu horizontalmente */
+    align-items: center; /* Alinha verticalmente ao centro */
+  }
+
+  .navigation ul {
+    display: flex; /* Usando flexbox */
+    flex-wrap: nowrap; /* Evita quebra de linha */
+    padding: 0; /* Remove padding padrão */
+    margin: 0; /* Remove margens padrão */
+    list-style: none;
+    font-size: 14px; /* Remove o estilo de marcador */
+  }
+
+  .navigation ul li {
+    margin-left: -25px; /* Espaçamento entre os itens */
+  }
+
+  .navigation ul li:last-child {
+    margin-right: 0; /* Remove margem do último item */
+  }
+
+  .navigation ul li a {
+    text-decoration: none; /* Remove sublinhado dos links */
+    color: inherit; /* Herda a cor do texto */
+    display: flex; /* Para alinhar ícone e texto */
+    align-items: center;/* Alinha verticalmente ícone e texto */
+  }
+
+
+.navigation ul li .icon {
+  font-size: 10px; /* Ajuste o tamanho do ícone conforme necessário */
+  width: 24px; /* Tamanho fixo, se necessário */
+  height: 24px; /* Tamanho fixo, se necessário */
+  margin-left: auto;
+}
+.navigation ul li a .text {
+  font-size: 0.55rem; /* Ajuste o tamanho do texto conforme necessário */  display: flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navigation ul li:hover a .icon{
+  transform: translateY (-15px);  color: var(--color-six);
+}
+
+.navigation ul li:hover a .text{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+
+
+
   
 
-@media only screen and (min-width: 600px){
-   /* for mobiles phone */
-  [class*="bg-cover"]{
-    width: 100vw;
+  .hero-section, .presentation-container {
+    padding: 10px;
+  }
+
+  .presentation-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: justify;
+  }
+
+  .presentation-title {
+    font-size: 20px;
+    margin-left: -25px;
+  }
+
+  .presentation-description {
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 25px;
+  }
+
+  .presentation-button {
+    padding: 8px 12px;
+    font-size: 14px;
+    margin-right: -84px;
+  }
+
+  .presentation-button:hover{
+    color: var(--color-one);
+  }
+  /* Grid de serviços */
+  .services-grid {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    aspect-ratio: 1; 
+    padding: 10px;
+    margin-right: 55px;
+    margin-left: -10px;
+  }
+
+  .service-card {
+    width: 100%;
+    height: 50vh;
+    text-align: center;
+    margin: 25px;
+  }
+
+  .service-image img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  /* Botão do WhatsApp */
+  .whatsapp-button {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+  }
+
+  .whatsapp-icon {
+    width: 100%;
+    height: auto;
+  }
+
+  /* Pop-up de cookies */
+  #cookie-popup {
+    padding: 10px;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  /* Footer */
+  .footer-container {
+    padding: 10px;
+  }
+
+  .footer-grid {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .footer-text {
+    font-size: 14px;
+  }
+
+  .footer-links {
+    padding: 0;
+  }
+
+  .footer-link {
+    font-size: 14px;
   }
 }
-  
+
+@media only screen and  (max-width: 482px) {
+  body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background: fixed;
+    object-fit: cover;
+    background-color: var(--color-two);
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
+    
+  }
+  .container {
+    display: flex;
+    justify-content: space-between; /* Espaça logo e menu */
+    align-items: center; /* Alinha verticalmente ao centro */
+    width: 100%; /* Garante que o contêiner use toda a largura */
+  }
+
+  .navigation {
+    height: 100px; /* Ajuste conforme necessário */
+    width: 100%;
+    display: flex; /* Alinha logo e menu horizontalmente */
+    align-items: center; /* Alinha verticalmente ao centro */
+  }
+
+  .navigation ul {
+    display: flex; /* Usando flexbox */
+    flex-wrap: nowrap; /* Evita quebra de linha */
+    padding: 0; /* Remove padding padrão */
+    margin: 0; /* Remove margens padrão */
+    list-style: none;
+    font-size: 14px; /* Remove o estilo de marcador */
+  }
+
+  .navigation ul li {
+    margin: -65px; /* Espaçamento entre os itens */
+  }
+
+  .navigation ul li:last-child {
+    margin-right: 0; /* Remove margem do último item */
+  }
+
+  .navigation ul li a {
+    text-decoration: none; /* Remove sublinhado dos links */
+    color: inherit; /* Herda a cor do texto */
+    display: flex; /* Para alinhar ícone e texto */
+    align-items: center;/* Alinha verticalmente ícone e texto */
+  }
+
+
+.navigation ul li .icon {
+  font-size: 10px; /* Ajuste o tamanho do ícone conforme necessário */
+  width: 24px; /* Tamanho fixo, se necessário */
+  height: 24px; /* Tamanho fixo, se necessário */
+  margin-left: -40px;
+  top: 25px;
+  margin-right: -16px;
+}
+.navigation ul li a .text {
+  font-size: 10px; /* Ajuste o tamanho do texto conforme necessário */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 30px;
 }
 
+.navigation ul li:hover a .icon{
+  transform: translateY (-10px);  color: var(--color-six);
+}
+
+.navigation ul li:hover a .text{
+  top: 45px;
+}
+
+.navigation img {
+  float: right;
+  width: 220px;
+  height: 225px;
+}
+
+
+/*image */
+.image{
+  width: 100%;
+  height: 110px;
+  background-position: 100% 100%;
+  object-fit: cover;
+  object-position: bottom;
+}
+
+/* Container de apresentação */
+.presentation-container {
+  padding: 100;
+}
+
+.presentation-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.presentation-title {
+  margin-left: 50px;
+  font-size: 24px; /* Tamanho maior para o título */
+}
+
+.presentation-description {
+  font-size: 16px; /* Tamanho de fonte ajustado */
+  text-align: center;
+  margin-left: 25px;
+}
+
+.presentation-button {
+  margin-top: 5px;
+  margin: -78px;
+  padding: 10px 15px;
+  font-size: 16px;
+}
+
+/* Grid de serviços */
+.services-grid {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 10px;
+  margin-left: -15px;
+}
+
+.service-card {
+  width: 100%;
+  text-align: center;
+}
+
+.service-image img {
+  max-width: 90%; /* Ajuste para imagem 100% da largura */
+  height: auto;
+}
+
+/* Botão do WhatsApp */
+.whatsapp-button {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
+}
+
+.whatsapp-icon {
+  width: 100%;
+  height: auto;
+}
+
+/* Pop-up de cookies */
+#cookie-popup {
+  padding: 10px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+/* Footer */
+.footer-container {
+  padding: 10px;
+}
+
+.footer-grid {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.footer-text {
+  font-size: 14px;
+}
+
+.footer-links {
+  padding: 0;
+}
+
+.footer-link {
+  font-size: 14px;
+}
+
+}
+
+
+
+@media (max-width: 768px) {
+  body {
+    background-color: #fff;
+    box-sizing: border-box;
+  }
+
+  .relative {
+    position: relative; /* Para posicionamento relativo se necessário */
+  }
+
+  .navigation {
+
+  height: 100px; /* Aumenta a altura da navegação para telas maiores */
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 30px; /* Ajusta o padding */
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.navigation ul li .icon {
+  font-size: 20px; /* Aumenta o tamanho do ícone */
+  width: 32px;
+  height: 32px;
+}
+
+.navigation ul li .text {
+  font-size: 20px; /* Aumenta o tamanho do texto */
+}
+
+.navigation img {
+  width: 38vw;
+  margin: 0;
+  top:40px;
+}
+
+.navigation ul {
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  font-size: 20px;
+}
+
+.navigation ul li {
+  margin-left: 20px; /* Aumenta o espaçamento entre os itens */
+}
+
+.navigation ul li:last-child {
+  margin-right: 0;
+}
+
+.navigation ul li a {
+  text-decoration: none;
+  color: inherit;
+  display: flex;
+  align-items: center;
+}
+ 
+/* Hero section */
+.hero-section {
+ 
+  height: 60vh; /* Aumenta a altura da hero section para telas maiores */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/* Container de apresentação */
+ .presentation-container {
+  padding: 25px;
+}
+
+.presentation-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.presentation-title {
+  font-size: 32px; /* Aumenta o tamanho do título */
+}
+
+.presentation-description {
+  font-size: 20px; /* Aumenta o tamanho da descrição */
+}
+
+.presentation-button {
+  margin-top: 15px;
+  padding: 15px 20px;
+  font-size: 20px;
+  margin-left: -45px;
+}
+
+/* Grid de serviços */
+.services-grid {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  padding: 20px;
+  margin-left: -30px;
+}
+
+.service-card {
+  width: 100%;
+  text-align: center;
+}
+
+.service-image img {
+  max-width: 50%; /* Ajuste para imagem com 70% da largura */
+  height: auto;
+}
+
+/* Botão do WhatsApp */
+.whatsapp-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 70px;
+  height: 70px;
+}
+
+.whatsapp-icon {
+  width: 100%;
+  height: auto;
+}
+
+/* Pop-up de cookies */
+#cookie-popup {
+  padding: 20px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+/* Footer */
+.footer-container {
+  padding: 20px;
+}
+
+.footer-grid {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.footer-text {
+  font-size: 18px;
+}
+
+.footer-links {
+  padding: 0;
+}
+
+.footer-link {
+  font-size: 18px;
+}
+
+/* Correção global para largura */
+* {
+  max-width: 100%;
+  box-sizing: border-box;
+}
+}
+
+@media screen and  (max-width: 1024px) and (min-width: 600px)  {
+  body {
+    background-color: #fff;
+    box-sizing: border-box;
+  }
+  .container {
+    display: flex;
+    justify-content: space-between; /* Espaça logo e menu */
+    align-items: center; /* Alinha verticalmente ao centro */
+    width: 100%; /* Garante que o contêiner use toda a largura */
+  }
+
+  .navigation {
+    height: 100px; /* Ajuste conforme necessário */
+    width: 100%;
+    display: flex; /* Alinha logo e menu horizontalmente */
+    align-items: center; /* Alinha verticalmente ao centro */
+  }
+
+  .navigation ul {
+    display: flex; /* Usando flexbox */
+    flex-wrap: nowrap; /* Evita quebra de linha */
+    padding: 0; /* Remove padding padrão */
+    margin: 0; /* Remove margens padrão */
+    list-style: none;
+    font-size: 14px; /* Remove o estilo de marcador */
+  }
+
+  .navigation ul li {
+    margin-left: -25px; /* Espaçamento entre os itens */
+  }
+
+  .navigation ul li:last-child {
+    margin-right: 0; /* Remove margem do último item */
+  }
+
+  .navigation ul li a {
+    text-decoration: none; /* Remove sublinhado dos links */
+    color: inherit; /* Herda a cor do texto */
+    display: flex; /* Para alinhar ícone e texto */
+    align-items: center;/* Alinha verticalmente ícone e texto */
+  }
+
+
+.navigation ul li .icon {
+  font-size: 10px; /* Ajuste o tamanho do ícone conforme necessário */
+  width: 24px; /* Tamanho fixo, se necessário */
+  height: 24px; /* Tamanho fixo, se necessário */
+  margin-left: 1px;
+}
+.navigation ul li a .text {
+  font-size: 10px; /* Ajuste o tamanho do texto conforme necessário */
+}
+
+.navigation ul li:hover a .icon{
+  transform: translateY (-15px);  color: var(--color-six);
+}
+
+.navigation ul li:hover a .text{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.navigation img {
+  width: 38vw;
+  margin: 0;
+  top:40px;
+}
+
+
+
+
+  .cards-container {
+    display: block; /* Se necessário */
+  }
+}
