--- a/css/talkme.css
+++ b/css/talkme.css
@@ -1,12 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*
-{
-  margin: 0;
-  padding: 0;
+*{
+  margin:0;
+  padding:0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  font-weight: 500;
 }
 
 :root{
@@ -17,16 +15,9 @@
   --color-five: #333;
   --color-six: #FFD700;
 }
-body {
-  margin: 0;
-  font-family: "Poppins", sans-serif;  
-  background-image: url('/img/logo-f.png');
-  background-size: 10%;
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
-}
+
+
+/* Navbar */
 /* Navbar */
 .navigation {
   position: relative;
@@ -37,6 +28,9 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+
+
+
 .navigation img {
 width:250px;
 padding: 12px;
@@ -104,6 +98,7 @@ opacity: 1;
 transform: translateY(10px);
 }
 
+
 .container {
   max-width: 100vw;
   display: flex;
@@ -113,7 +108,9 @@ transform: translateY(10px);
 }
 
 
-
+.logo:hover {
+  color: var(--color-tree);
+}
 /* Seção de Contato */
 .contact-section {
   
@@ -342,5 +339,340 @@ transform: translateY(10px);
 .whatsapp-icon {
   width: 35px;
   height: 35px;
+}
+
+/* Responsividade para múltiplos tamanhos de tela */
+
+/* Telas muito pequenas (até 320px) */
+@media screen and (max-width: 320px) {
+  body {
+    background-color: #fff;
+    box-sizing: border-box;
+  }
+
+  .relative {
+    position: relative; /* Para posicionamento relativo se necessário */
+  }
+
+  .navigation {
+    height: 100px; /* Ajuste conforme necessário */
+    width: 100%;
+    display: flex; /* Alinha logo e menu horizontalmente */
+    align-items: center; /* Alinha verticalmente ao centro */
+  }
+
+  .container {
+    display: flex;
+    justify-content: space-between; /* Espaça logo e menu */
+    align-items: center; /* Alinha verticalmente ao centro */
+    width: 100%; /* Garante que o contêiner use toda a largura */
+  }
+  .navigation ul li .icon {
+    font-size: 10px; /* Ajuste o tamanho do ícone conforme necessário */
+    width: 24px; /* Tamanho fixo, se necessário */
+    height: 24px; /* Tamanho fixo, se necessário */
+  }
+  .navigation ul li .text {
+    font-size: 14px; /* Ajuste o tamanho do texto conforme necessário */
+  }
+
+  .navigation img {
+    display: none;
+  }
+
+  .navigation ul {
+    display: flex; /* Usando flexbox */
+    flex-wrap: nowrap; /* Evita quebra de linha */
+    padding: 0; /* Remove padding padrão */
+    margin: 0; /* Remove margens padrão */
+    list-style: none;
+    font-size: 14px; /* Remove o estilo de marcador */
+  }
+
+  .navigation ul li {
+    margin-left: -25px; /* Espaçamento entre os itens */
+  }
+
+  .navigation ul li:last-child {
+    margin-right: 0; /* Remove margem do último item */
+  }
+
+  .navigation ul li a {
+    text-decoration: none; /* Remove sublinhado dos links */
+    color: inherit; /* Herda a cor do texto */
+    display: flex; /* Para alinhar ícone e texto */
+    align-items: center;
+    ; /* Alinha verticalmente ícone e texto */
+  }
+
+  .cards-container {
+    display: block; /* Se necessário */
+  }
+}
+
+@media screen and (max-width: 480px) {
+  body {
+    background-color: #fff;
+    box-sizing: border-box;
+  }
+
+  .relative {
+    position: relative; /* Para posicionamento relativo se necessário */
+  }
+
+  .navigation {
+    height: 100px; /* Ajuste conforme necessário */
+    width: 100%;
+    display: flex; /* Alinha logo e menu horizontalmente */
+    align-items: center; /* Alinha verticalmente ao centro */
+  }
+
+  .container {
+    display: flex;
+    justify-content: space-between; /* Espaça logo e menu */
+    align-items: center; /* Alinha verticalmente ao centro */
+    width: 100%; /* Garante que o contêiner use toda a largura */
+  }
+  .navigation ul li .icon {
+    font-size: 10px; /* Ajuste o tamanho do ícone conforme necessário */
+    width: 24px; /* Tamanho fixo, se necessário */
+    height: 24px; /* Tamanho fixo, se necessário */
+  }
+  .navigation ul li .text {
+    font-size: 14px; /* Ajuste o tamanho do texto conforme necessário */
+  }
+
+  .navigation img {
+    display: none;
+  }
+
+  .navigation ul {
+    display: flex; /* Usando flexbox */
+    flex-wrap: nowrap; /* Evita quebra de linha */
+    padding: 0; /* Remove padding padrão */
+    margin: 0; /* Remove margens padrão */
+    list-style: none;
+    font-size: 14px; /* Remove o estilo de marcador */
+  }
+
+  .navigation ul li {
+    margin-left: 10px; /* Espaçamento entre os itens */
+  }
+
+  .navigation ul li:last-child {
+    margin-right: 0; /* Remove margem do último item */
+  }
+
+  .navigation ul li a {
+    text-decoration: none; /* Remove sublinhado dos links */
+    color: inherit; /* Herda a cor do texto */
+    display: flex; /* Para alinhar ícone e texto */
+    align-items: center;
+    ; /* Alinha verticalmente ícone e texto */
+  }
+
+  .cards-container {
+    display: block; /* Se necessário */
+  }
+
+}
+@media (max-width: 640px) {
+  body {
+    background-color: #fff;
+    box-sizing: border-box;
+  }
+
+  .relative {
+    position: relative; /* Para posicionamento relativo se necessário */
+  }
+
+  .navigation {
+    height: 100px; /* Ajuste conforme necessário */
+    width: 100%;
+    display: flex; /* Alinha logo e menu horizontalmente */
+    align-items: center; /* Alinha verticalmente ao centro */
+  }
+
+  .container {
+    display: flex;
+    justify-content: space-between; /* Espaça logo e menu */
+    align-items: center; /* Alinha verticalmente ao centro */
+    width: 100%; /* Garante que o contêiner use toda a largura */
+  }
+  .navigation ul li .icon {
+    font-size: 10px; /* Ajuste o tamanho do ícone conforme necessário */
+    width: 24px; /* Tamanho fixo, se necessário */
+    height: 24px; /* Tamanho fixo, se necessário */
+  }
+  .navigation ul li .text {
+    font-size: 14px; /* Ajuste o tamanho do texto conforme necessário */
+  }
+
+  .navigation img {
+    width: 50%;
+  }
+
+  .navigation ul {
+    display: flex; /* Usando flexbox */
+    flex-wrap: nowrap; /* Evita quebra de linha */
+    padding: 0; /* Remove padding padrão */
+    margin: 0; /* Remove margens padrão */
+    list-style: none;
+    font-size: 14px; /* Remove o estilo de marcador */
+  }
+
+  .navigation ul li {
+    margin-left: -25px; /* Espaçamento entre os itens */
+  }
+
+  .navigation ul li:last-child {
+    margin-right: 0; /* Remove margem do último item */
+  }
+
+  .navigation ul li a {
+    text-decoration: none; /* Remove sublinhado dos links */
+    color: inherit; /* Herda a cor do texto */
+    display: flex; /* Para alinhar ícone e texto */
+    align-items: center;
+    ; /* Alinha verticalmente ícone e texto */
+  }
+
+  .cards-container {
+    display: block; /* Se necessário */
+  }
+
+}
+
+
+@media screen and (max-width: 768px) {
+  body {
+    background-color: #fff;
+    box-sizing: border-box;
+  }
+
+  .relative {
+    position: relative; /* Para posicionamento relativo se necessário */
+  }
+
+  .navigation {
+    height: 100px; /* Ajuste conforme necessário */
+    width: 100%;
+    display: flex; /* Alinha logo e menu horizontalmente */
+    align-items: center; /* Alinha verticalmente ao centro */
+  }
+
+  .container {
+    display: flex;
+    justify-content: space-between; /* Espaça logo e menu */
+    align-items: center; /* Alinha verticalmente ao centro */
+    width: 100%; /* Garante que o contêiner use toda a largura */
+  }
+  .navigation ul li .icon {
+    font-size: 10px; /* Ajuste o tamanho do ícone conforme necessário */
+    width: 24px; /* Tamanho fixo, se necessário */
+    height: 24px; /* Tamanho fixo, se necessário */
+  }
+  .navigation ul li .text {
+    font-size: 14px; /* Ajuste o tamanho do texto conforme necessário */
+  }
+
+  .navigation img {
+    width: 50%;
+  }
+
+  .navigation ul {
+    display: flex; /* Usando flexbox */
+    flex-wrap: nowrap; /* Evita quebra de linha */
+    padding: 0; /* Remove padding padrão */
+    margin: 0; /* Remove margens padrão */
+    list-style: none;
+    font-size: 14px; /* Remove o estilo de marcador */
+  }
+
+  .navigation ul li {
+    margin-left: -25px; /* Espaçamento entre os itens */
+  }
+
+  .navigation ul li:last-child {
+    margin-right: 0; /* Remove margem do último item */
+  }
+
+  .navigation ul li a {
+    text-decoration: none; /* Remove sublinhado dos links */
+    color: inherit; /* Herda a cor do texto */
+    display: flex; /* Para alinhar ícone e texto */
+    align-items: center;
+    ; /* Alinha verticalmente ícone e texto */
+  }
+
+  .cards-container {
+    display: block; /* Se necessário */
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  body {
+    background-color: #fff;
+    box-sizing: border-box;
+  }
+
+  .relative {
+    position: relative; /* Para posicionamento relativo se necessário */
+  }
+
+  .navigation {
+    height: 100px; /* Ajuste conforme necessário */
+    width: 100%;
+    display: flex; /* Alinha logo e menu horizontalmente */
+    align-items: center; /* Alinha verticalmente ao centro */
+  }
+
+  .container {
+    display: flex;
+    justify-content: space-between; /* Espaça logo e menu */
+    align-items: center; /* Alinha verticalmente ao centro */
+    width: 100%; /* Garante que o contêiner use toda a largura */
+  }
+  .navigation ul li .icon {
+    font-size: 10px; /* Ajuste o tamanho do ícone conforme necessário */
+    width: 24px; /* Tamanho fixo, se necessário */
+    height: 24px; /* Tamanho fixo, se necessário */
+  }
+  .navigation ul li .text {
+    font-size: 14px; /* Ajuste o tamanho do texto conforme necessário */
+  }
+
+  .navigation img {
+    width: 25%;
+  }
+
+  .navigation ul {
+    display: flex; /* Usando flexbox */
+    flex-wrap: nowrap; /* Evita quebra de linha */
+    padding: 0; /* Remove padding padrão */
+    margin: 0; /* Remove margens padrão */
+    list-style: none;
+    font-size: 14px; /* Remove o estilo de marcador */
+  }
+
+  .navigation ul li {
+    margin-left: -25px; /* Espaçamento entre os itens */
+  }
+
+  .navigation ul li:last-child {
+    margin-right: 0; /* Remove margem do último item */
+  }
+
+  .navigation ul li a {
+    text-decoration: none; /* Remove sublinhado dos links */
+    color: inherit; /* Herda a cor do texto */
+    display: flex; /* Para alinhar ícone e texto */
+    align-items: center;
+    ; /* Alinha verticalmente ícone e texto */
+  }
+
+  .cards-container {
+    display: block; /* Se necessário */
+  }
 }
 
